--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ section {
 }
 
 .container {
-    max-width: 80%;
+    max-width: 70%;
     margin: 0 auto;
 }
 
@@ -30,9 +30,9 @@ section {
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 25%;
-    right: 10%;
-    left: 10%;
+    top: 20%;
+    right: 25%;
+    left: 25%;
 }
 
 .section-title {
@@ -82,10 +82,17 @@ ul li {
     align-items: center;
 }
 
+.separator {
+    width: 100%;
+    height: 1rem;
+    background-color: rgb(159, 3, 3);
+}
+
 /* header styling  */
 header {
     background-color: #130010ea;
     opacity: .8;
+    z-index: 1;
     position: fixed;
     top: 0;
     left: 0;
@@ -102,7 +109,7 @@ header nav a {
     text-decoration: none;
     color: #ffffff;
     font-size: 2.5rem;
-    padding: 1rem 3rem;
+    padding: 1rem 2.5rem;
 }
 
 /* the first section/hot  */
@@ -110,6 +117,7 @@ header nav a {
     height: 100%;
     background-image: url("hot.jpg");
     background-size: cover;
+    background-position: center;
 }
 
 /* the second section/juicy  */
@@ -117,6 +125,7 @@ header nav a {
     height: 100%;
     background-image: url("juicy.jpg");
     background-size: cover;
+    background-position: center;
 }
 
 /* the third section/cosy  */
@@ -124,6 +133,7 @@ header nav a {
     height: 100%;
     background-image: url("cosy.jpg");
     background-size: cover;
+    background-position: center;
 }
 
 
