--- a/styles.css
+++ b/styles.css
@@ -14,76 +14,90 @@ a , h1 {
     font-family: 'Spirax', sans-serif;
 }
 
-/* repeated classes  */
-
-section {
-    height: 100vh;
-    position: relative;
-}
-
+/* global classes  */
 .container {
-    max-width: 70%;
+    max-width: 80%;
     margin: 0 auto;
 }
 
 .flex {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    top: 20%;
-    right: 25%;
-    left: 25%;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    color: #ffffff;
+    opacity: .8;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
+/* center, viewport heigt and background image for all sections  */
+#hot, 
+#juicy, 
+#cosy{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+
+/* the first section/hot-background-image-url  */
+#hot {
+    background-image: url("hot.jpg");
+}
+
+/* the second section/juicy-background-image-url  */
+#juicy {
+    background-image: url("juicy.jpg");
+}
+
+/* the third section/cosy-background-image-url  */
+#cosy {
+    background-image: url("cosy.jpg");
+}
+
+
+/* styling to title, text och pricelist for each section  */
 .section-title {
     font-size: 6rem;
     color: rgb(159, 3, 3);
-    text-align: center;
-    margin-bottom: 2rem;
 }
 
 .p-1 {
     background-color: rgb(159, 3, 3);
-    opacity: .8;
-    font-size: 1.5rem;
     padding: 1rem 2rem;
-    color: #ffffff;
-    width: 660px;
-    margin-bottom: 2rem;
-    text-align: center;
+    align-self: stretch;
+    position: relative;
+    right: 5rem;
 }
 
 .p-2 {
     background-color: rgb(159, 3, 3);
-    opacity: .8;
-    font-size: 1.5rem;
-    padding: 1rem 2rem;
-    color: #ffffff;
-    width: 660px;
-    text-align: center;
-    align-self: flex-end;
-    margin-bottom: 2rem;
+    padding: 1rem 2rem;  
+    align-self: stretch;
+    position: relative;
+    left: 5rem;
 }
 
 ul {
-    align-self: center;
     background-color: #000000;
-    opacity: .8;
-    width: 660px;
     padding: 1.3rem 3rem;
+    align-self: stretch;
 }
 
+/* one pricelist-item  */
 ul li {
     list-style: none;
-    color: #ffffff;
-    font-size: 1.3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 .separator {
-    width: 100%;
     height: 1rem;
     background-color: rgb(159, 3, 3);
 }
@@ -94,7 +108,6 @@ header {
     opacity: .8;
     z-index: 1;
     position: fixed;
-    top: 0;
     left: 0;
     right: 0;
 }
@@ -112,29 +125,7 @@ header nav a {
     padding: 1rem 2.5rem;
 }
 
-/* the first section/hot  */
-.hot-background {
-    height: 100%;
-    background-image: url("hot.jpg");
-    background-size: cover;
-    background-position: center;
-}
 
-/* the second section/juicy  */
-.juicy-background {
-    height: 100%;
-    background-image: url("juicy.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-/* the third section/cosy  */
-.cosy-background {
-    height: 100%;
-    background-image: url("cosy.jpg");
-    background-size: cover;
-    background-position: center;
-}
 
 
 
