--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,37 @@ a , h1 {
     font-family: 'Spirax', sans-serif;
 }
 
+/* header styling  */
+header {
+    background-color: #130010ea;
+    opacity: .8;
+    z-index: 1;
+    position: fixed;
+    left: 0;
+    right: 0;
+}
+
+header nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 2.5rem;
+    padding: 1rem 2.5rem;
+}
+
+
 /* global classes  */
 .container {
     max-width: 80%;
     margin: 0 auto;
 }
 
+/* init design for each section  */
 .flex {
     display: flex;
     flex-direction: column;
@@ -102,30 +127,50 @@ ul li {
     background-color: rgb(159, 3, 3);
 }
 
-/* header styling  */
-header {
-    background-color: #130010ea;
-    opacity: .8;
-    z-index: 1;
-    position: fixed;
-    left: 0;
+
+
+
+/* responsive  */
+@media screen and (max-width: 992px){
+    header nav a {
+    font-size: 1.5rem;
+}
+
+.flex {
+    gap: 2rem;
+    font-size: 1.2rem;
+}
+
+.section-title {
+    font-size: 4rem;
+}
+
+}
+
+@media screen and (max-width: 768px){
+    .p-1 {
+    position: relative;
     right: 0;
 }
 
-header nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.p-2 {
+    position: relative;
+    left: 0;
+}
 }
 
-header nav a {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 2.5rem;
-    padding: 1rem 2.5rem;
+@media screen and (max-width: 420px){
+    header nav a {
+    padding: 1rem;
 }
 
+.flex {
+    gap: 1.5rem;
+    font-size: 1rem;
+}
 
+#cosy  ul li:last-of-type {
+    display: block;
+}
 
-
-
+}
